package logo.Decorateur;

import logo.Logo.Logo;

public class DecorateurCandy extends LogoDecorateur {
    public DecorateurCandy(Logo i)
    {
        super(i, 1, "ressource/img/Candy.png", 441, 202);
    }
}
