package logo.Decorateur;

import logo.Affichage.MyImage;
import logo.Logo.Logo;

public class DecorateurLunette extends LogoDecorateur {
    public DecorateurLunette(Logo i)
    {
        super(i, 3, "ressource/img/Sunglasses.png", 255, 76);
    }
}

