package logo.Decorateur;

import logo.Logo.Logo;

public class DecorateurSmiley extends LogoDecorateur {
    public DecorateurSmiley(Logo i)
    {
        super(i, 4, "ressource/img/Smiley.png", 260, 210);
    }
}
